@@ -1,50 +1,0 @@
-<?xml version="1.0"?>
-<import-steps>
- <import-step id="content" version="20050927-01"
-              handler="Products.CMFCore.exportimport.content.importSiteStructure"
-              title="Content">
-  <dependency step="plone-final"/>
-    Import the site's structure and content.
- </import-step>
- <import-step id="cssregistry" version="20051015-01"
-              handler="Products.ResourceRegistries.exportimport.cssregistry.importCSSRegistry"
-              title="Stylesheet registry">
-  <dependency step="toolset"/>
-  <dependency step="componentregistry"/>
-    Import stylesheet registry
- </import-step>
- <import-step id="kssregistry" version="20070407-01"
-              handler="Products.ResourceRegistries.exportimport.kssregistry.importKSSRegistry"
-              title="KSS registry">
-  <dependency step="toolset"/>
-  <dependency step="componentregistry"/>
-    Import KSS registry
- </import-step>
- <import-step id="jsregistry" version="20051015-01"
-              handler="Products.ResourceRegistries.exportimport.jsregistry.importJSRegistry"
-              title="Javascript registry">
-  <dependency step="toolset"/>
-  <dependency step="componentregistry"/>
-    Import javascript registry
- </import-step>
- <import-step id="viewlets" version="20070503-01"
-              handler="plone.app.viewletmanager.exportimport.storage.importViewletSettingsStorage"
-              title="Viewlet Settings">
-  <dependency step="componentregistry"/>
-    Import viewlet settings
- </import-step>
- <import-step id="kss_mimetype" version="20061125-01"
-              handler="plone.app.kss.exportimport.setup.setupMimetype"
-              title="KSS setup / mimetype">
-  <dependency step="plone-archetypes"/>
-  <dependency step="mimetypes-registry-various"/>
-    KSS (Kinetic Style Sheet) setup. Register kss mimetype.
- </import-step>
- <import-step id="kupu-setup" version="20061211-01"
-              handler="Products.kupu.plone.exportimport.importKupuSettings"
-              title="Kupu Settings">
-  <dependency step="toolset"/>
-  <dependency step="typeinfo"/>
-  Import Kupu settings
- </import-step>
-</import-steps>
