@@ -8,6 +8,9 @@ Changelog
 4.0 - Unreleased
 ----------------
 
+- Converted import and export steps XML files to use ZCML registrations.
+  [hannosch]
+
 - Made sure to have a complete list of non-installable profiles. No longer
   apply the filter to base profiles and ignore our default profile. This works
   in combination with the corresponding changes in quick installer to reduce
